Better demo of Travis build steps

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,12 @@ language: c++
 #   ./configure && make && make test
 # https://travis-ci.com/claremacrae/ci_playground/builds/119057435#L441
 
+# -------------------------------------------------------------------
+# The order of available build steps in TravisCI:
 # https://docs.travis-ci.com/user/job-lifecycle/#the-job-lifecycle
-#  OPTIONAL Install apt addons
-#  OPTIONAL Install cache components
-#  before_install
-#  install
-#  before_script
-#  script
-#  OPTIONAL before_cache (for cleaning up cache)
-#  after_success or after_failure
-#  OPTIONAL before_deploy
-#  OPTIONAL deploy
-#  OPTIONAL after_deploy
-#  after_script
 
-script: echo Hello
+install:
+  echo install - runs after apt addons
+
+script:
+  echo script
