--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ build_script:
 
 test_script:
   - echo test_script
+  - gobbledegook
 
 # Try turning email notifications off
 # The following comments suggest this may not work
@@ -29,3 +30,4 @@ notifications:
     on_build_success: false 
     on_build_failure: false 
     on_build_status_changed: false
+
