--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,6 @@ test_script:
 
 notifications: 
   - provider: Email 
-    on_build_success: false 
-    on_build_failure: false 
-    on_build_status_changed: false
-
+    on_build_success: true 
+    on_build_failure: true 
+    on_build_status_changed: true
