--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,14 +20,4 @@ test_script:
   - echo test_script
   - gobbledegook
 
-# Try turning email notifications off
-# The following comments suggest this may not work
-# https://help.appveyor.com/discussions/problems/13537-email-notifications-configuration-has-no-effect
-# https://help.appveyor.com/discussions/questions/18326-how-do-i-disable-email-notifications-for-a-single-project
-
-notifications:
-  # This gives "Error sending Email notification: Value cannot be null. Parameter name: source"
-  - provider: Email 
-    on_build_success: true 
-    on_build_failure: true 
-    on_build_status_changed: true
+# Notifications are best controlled via Appveyor preferences
