Add a TODO to try out Travis jobs and stages at some point

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ language: c++
 install:
   echo install - runs after apt addons
 
+# TODO Try out jobs and stages
+# - https://docs.travis-ci.com/user/build-stages/
+# - https://docs.travis-ci.com/user/conditional-builds-stages-jobs/
+
 script:
   echo script
 
