--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,12 @@ install:
 # - https://docs.travis-ci.com/user/conditional-builds-stages-jobs/
 
 script:
-  echo script
+  - echo script
+  - mkdir .build
+  - cd .build
+  - cmake ..
+  - cmake --build .
+  # - ctest --verbose
 
 notifications:
   email: false
