Try building with multiple Visual Studio versions in Appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,10 @@
 # An empty .appveyor.yml file defaults to MSBuild
 # https://ci.appveyor.com/project/claremacrae/ci-playground/builds/25964280
 
-image: Visual Studio 2017
+image:
+  - Visual Studio 2015
+  - Visual Studio 2017
+  - Visual Studio 2019
 
 # -------------------------------------------------------------------
 # The order of available build steps in Appveyor:
