--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,10 +4,19 @@
 # https://ci.appveyor.com/project/claremacrae/ci-playground/builds/25964280
 
 # https://www.appveyor.com/docs/lang/cpp/
-image:
-  - Visual Studio 2015
-  - Visual Studio 2017
-  - Visual Studio 2019
+#image:
+#  - Visual Studio 2015
+#  - Visual Studio 2017
+#  - Visual Studio 2019
+
+environment:
+  matrix:
+    - TARGET: vs2015
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    - TARGET: vs2017
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - TARGET: vs2019
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
 
 # TODO Try using this to build multiple configurations, including mingw:
 # https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
