--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,15 +10,21 @@
 #  - Visual Studio 2019
 
 # https://www.appveyor.com/docs/build-environment/#using-multiple-images-for-the-same-build
+# GENERATOR approach taken from https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
 environment:
-  BUILD_ENVIRONMENT: windows # Use windows cmd, unless overridden in the matrix
   matrix:
     - TARGET: vs2015
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      GENERATOR: '"Visual Studio 14 2015"'
     - TARGET: vs2017
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      GENERATOR: '"Visual Studio 15 2017"'
     - TARGET: vs2019
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      GENERATOR: '"Visual Studio 16 2019"'
+    - TARGET: mingw64
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      GENERATOR: '"MinGW Makefiles"'
 
 # TODO Try using this to build multiple configurations, including mingw:
 # https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
@@ -39,12 +45,16 @@ install:
   - echo install - runs after cloning
 
 build_script:
-  - cmd: if [%BUILD_ENVIRONMENT%]==[windows] (
-      echo build_script &&
-      mkdir .build &&
-      cd .build &&
-      cmake .. &&
-      cmake --build . )
+  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
+  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
+  - cmd: >-
+      set
+      set PATH=C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw32\bin;%PATH%
+      echo build_script
+      mkdir .build
+      cd .build
+      cmake -G %GENERATOR% ..
+      cmake --build
 
 test_script:
   - echo test_script
