--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,14 +47,13 @@ install:
 build_script:
   # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
   # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
-  - cmd:
-      set && 
-      set PATH=C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw32\bin;%PATH% &&
-      echo build_script &&
-      mkdir .build &&
-      cd .build &&
-      cmake -G %GENERATOR% .. &&
-      cmake --build
+  - set
+  - set PATH=C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw32\bin;%PATH%
+  - echo build_script
+  - mkdir .build
+  - cd .build
+  - cmake -G %GENERATOR% ..
+  - cmake --build
 
 test_script:
   - echo test_script
