--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,6 +57,20 @@ build_script:
   #   If you want to use a UNIX shell, then use MSYS Makefiles.
   - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
   - set PATH=C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw32\bin;%PATH%
+
+  # Try
+  # - https://project-renard.github.io/doc/development/meeting-log/posts/2016/05/03/windows-build-with-msys2/
+  # - https://project-renard.github.io/doc/development/meeting-log/posts/2016/05/03/windows-build-with-msys2/
+  # - https://git.naviter.com/sirmancnik/libjpeg-turbo/src/commit/c082dc039db6a6bc42bcd67571f50727d197a2ef/appveyor.yml
+
+  # This one looks really good:
+  # - https://github.com/meta-toolkit/meta/blob/master/.appveyor.yml
+
+  # TODO Try just invoking msys2 directly, and running simple commands - to understand how it works
+  # TODO See if it's possible to have a script that works with msys2 and CMD and Travis CI
+  # TODO May just experiment with different ways of writing multi-line commands
+  # TODO Experiment with https://yaml-multiline.info/
+
   - set PATH
 
   - echo build_script
