--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,39 +45,41 @@ install:
   - echo install - runs after cloning
 
 build_script:
-  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
-  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
-  - set
-  # Remove git from the path, in attempt to fix the following warning:
-  # CMake Error at C:/Program Files (x86)/CMake/share/cmake-3.13/Modules/CMakeMinGWFindMake.cmake:12 (message):
-  #   sh.exe was found in your PATH, here:
-  #   C:/Program Files/Git/usr/bin/sh.exe
-  #   For MinGW make to work correctly sh.exe must NOT be in your path.
-  #   Run cmake from a shell that does not have sh.exe in your PATH.
-  #   If you want to use a UNIX shell, then use MSYS Makefiles.
-  - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
-  - set PATH=C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw32\bin;%PATH%
-
-  # Try
-  # - https://project-renard.github.io/doc/development/meeting-log/posts/2016/05/03/windows-build-with-msys2/
-  # - https://project-renard.github.io/doc/development/meeting-log/posts/2016/05/03/windows-build-with-msys2/
-  # - https://git.naviter.com/sirmancnik/libjpeg-turbo/src/commit/c082dc039db6a6bc42bcd67571f50727d197a2ef/appveyor.yml
-
-  # This one looks really good:
-  # - https://github.com/meta-toolkit/meta/blob/master/.appveyor.yml
-
-  # TODO Try just invoking msys2 directly, and running simple commands - to understand how it works
-  # TODO See if it's possible to have a script that works with msys2 and CMD and Travis CI
-  # TODO May just experiment with different ways of writing multi-line commands
-  # TODO Experiment with https://yaml-multiline.info/
-
-  - set PATH
-
   - echo build_script
-  - mkdir .build
-  - cd .build
-  - cmake -G %GENERATOR% ..
-  - cmake --build .
+
+#  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
+#  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
+#  - set
+#  # Remove git from the path, in attempt to fix the following warning:
+#  # CMake Error at C:/Program Files (x86)/CMake/share/cmake-3.13/Modules/CMakeMinGWFindMake.cmake:12 (message):
+#  #   sh.exe was found in your PATH, here:
+#  #   C:/Program Files/Git/usr/bin/sh.exe
+#  #   For MinGW make to work correctly sh.exe must NOT be in your path.
+#  #   Run cmake from a shell that does not have sh.exe in your PATH.
+#  #   If you want to use a UNIX shell, then use MSYS Makefiles.
+#  - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
+#  - set PATH=C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw32\bin;%PATH%
+#
+#  # Try
+#  # - https://project-renard.github.io/doc/development/meeting-log/posts/2016/05/03/windows-build-with-msys2/
+#  # - https://project-renard.github.io/doc/development/meeting-log/posts/2016/05/03/windows-build-with-msys2/
+#  # - https://git.naviter.com/sirmancnik/libjpeg-turbo/src/commit/c082dc039db6a6bc42bcd67571f50727d197a2ef/appveyor.yml
+#
+#  # This one looks really good:
+#  # - https://github.com/meta-toolkit/meta/blob/master/.appveyor.yml
+#
+#  # TODO Try just invoking msys2 directly, and running simple commands - to understand how it works
+#  # TODO See if it's possible to have a script that works with msys2 and CMD and Travis CI
+#  # TODO May just experiment with different ways of writing multi-line commands
+#  # TODO Experiment with https://yaml-multiline.info/
+#
+#  - set PATH
+#
+#  - echo build_script
+#  - mkdir .build
+#  - cd .build
+#  - cmake -G %GENERATOR% ..
+#  - cmake --build .
 
 test_script:
   - echo test_script
