--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,7 +45,12 @@ install:
   - echo install - runs after cloning
 
 build_script:
-  - echo build_script
+  - cmd: echo build_script One-line script
+  - cmd: echo build_script Two-line script &&
+      echo Command 2
+  - cmd: echo build_script Three-line script &&
+      echo Command 2 &&
+      echo Command 3
 
 #  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
 #  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
