--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,15 +16,15 @@ environment:
     - TARGET: mingw64
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: '"MinGW Makefiles"'
-    - TARGET: vs2015
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      GENERATOR: '"Visual Studio 14 2015"'
-    - TARGET: vs2017
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      GENERATOR: '"Visual Studio 15 2017"'
-    - TARGET: vs2019
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      GENERATOR: '"Visual Studio 16 2019"'
+#    - TARGET: vs2015
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+#      GENERATOR: '"Visual Studio 14 2015"'
+#    - TARGET: vs2017
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+#      GENERATOR: '"Visual Studio 15 2017"'
+#    - TARGET: vs2019
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+#      GENERATOR: '"Visual Studio 16 2019"'
 
 # TODO Try using this to build multiple configurations, including mingw:
 # https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
