--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,10 +49,16 @@ build_script:
   - cmd: echo build_script One-line script
 
   # All commands appear in one blue line in the output
-  # This makes debugging failing steps a bit harder to do
+  # This makes debugging failing steps a bit harder to do.
+  # It also needs && at the end of each line
   - cmd: echo build_script Three-line script &&
       echo Command 2 &&
       echo Command 3
+
+  - cmd: "
+    echo build_script Three-line script in double-quotes
+    echo Command 2 &&
+    echo Command 3"
 
 #  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
 #  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
