--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,7 +67,7 @@ build_script:
 
       echo build_script Three-line script with ">"
 
-      echo Command 2 &&
+      echo Command 2
 
       echo Command 3
 
@@ -75,7 +75,7 @@ build_script:
 
       echo build_script Three-line script with ">-"
 
-      echo Command 2 &&
+      echo Command 2
 
       echo Command 3
 
