--- a/appveyor.yml
+++ b/appveyor.yml
@@ -90,6 +90,12 @@ build_script:
       echo Command 2
       echo Command 3
 
+
+  - |-
+      echo build_script Three-line batch script
+      echo Command 2
+      echo Command 3
+
 #  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
 #  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
 #  - set
