--- a/appveyor.yml
+++ b/appveyor.yml
@@ -90,7 +90,9 @@ build_script:
       echo Command 2
       echo Command 3
 
-
+  # Nice syntax - nothing special to run lines together
+  # Each command is a separate step in the build logs
+  # And no need for blank line in the YAML 
   - |-
       echo build_script Three-line batch script
       echo Command 2
