--- a/appveyor.yml
+++ b/appveyor.yml
@@ -98,8 +98,12 @@ build_script:
       echo Command 2
       echo Command 3
 
+  # Nice syntax - nothing special to run lines together
+  # Each command is a separate step in the build logs
+  # And no need for blank line in the YAML
+  # And CMD is more readable than "|" for batch
   - cmd: |
-      echo build_script Three-line script with "|"
+      echo build_script Three-line CMD script with "|"
       echo Command 2
       echo Command 3
 
