--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,15 +56,9 @@ build_script:
       echo Command 3
       echo ============================================
 
-  - cmd: |
-      if [%TARGET%]==[mingw64] (
-          echo mingw64
-      )
+  - cmd: if [%TARGET%]==[mingw64] echo mingw64
 
-  - cmd: |
-      if [%TARGET%]!=[mingw64] (
-          echo Not mingw64
-      )
+  - cmd: if [%TARGET%]!=[mingw64] echo Not mingw64
 
 #  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
 #  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
