Try multi-line if/else

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -62,6 +62,12 @@ build_script:
 
   - cmd: if not %TARGET%==mingw64 (echo mingw64) else (echo Not mingw64)
 
+  - cmd: if [%TARGET%]==[mingw64] (
+      echo mingw64
+      ) else (
+      echo Not mingw64
+      )
+
 #  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
 #  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
 #  - set
