--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,12 +56,25 @@ build_script:
       echo Command 3
       echo ============================================
 
+  # https://ss64.com/nt/if.html
+  # "When comparing against a variable that may be empty, we include a pair of brackets [ ] 
+  # so that if the variable does happen to be empty the IF command still has something to compare"
+
+  # One-line if
   - cmd: if [%TARGET%]==[mingw64] echo mingw64
 
+  # One-line if not
   - cmd: if NOT [%TARGET%]==[mingw64] echo Not mingw64
 
+  # One-line if/else
   - cmd: if not %TARGET%==mingw64 (echo mingw64) else (echo Not mingw64)
 
+  # Multi-line if
+  - cmd: if [%TARGET%]==[mingw64] (
+        echo mingw64
+      )
+
+  # Multi-line if else
   - cmd: if [%TARGET%]==[mingw64] (
         echo mingw64
       ) else (
