--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,7 +67,7 @@ build_script:
   - cmd: if NOT [%TARGET%]==[mingw64] echo Not mingw64
 
   # One-line if/else
-  - cmd: if not %TARGET%==mingw64 (echo mingw64) else (echo Not mingw64)
+  - cmd: if not [%TARGET%]==[mingw64] (echo mingw64) else (echo Not mingw64)
 
   # Multi-line if
   - cmd: if [%TARGET%]==[mingw64] (
