--- a/appveyor.yml
+++ b/appveyor.yml
@@ -89,6 +89,15 @@ build_script:
         echo Not mingw64
       )
 
+  # =================================================================================
+  # Understand msys2/mingw
+  # =================================================================================
+
+  - cmd: if [%TARGET%]==[mingw64] (
+        echo mingw64
+        dir C:\msys64
+      )
+
 #  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
 #  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
 #  - set
