Try using same commands for all of cygwin and msys - and seeing cmake generators

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,18 +14,22 @@
 environment:
   matrix:
     - TARGET: mingw
+      MYSHELL: C:\MinGW\msys\1.0\bin\bash
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: '"MinGW Makefiles"'
 
     - TARGET: mingw64
+      MYSHELL: C:\msys64\usr\bin\bash
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: '"MinGW Makefiles"'
 
     - TARGET: cygwin
+      MYSHELL: C:\cygwin\bin\bash
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: '"MinGW Makefiles"'
 
     - TARGET: cygwin64
+      MYSHELL: C:\cygwin64\bin\bash
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: '"MinGW Makefiles"'
 #    - TARGET: vs2015
@@ -102,26 +106,14 @@ build_script:
       )
 
   # =================================================================================
-  # Understand msys2/mingw
+  # Understand msys2/mingw and cygwin
   # =================================================================================
 
-  - cmd: if [%TARGET%]==[mingw] (
-      env &&
-      C:\MinGW\msys\1.0\bin\bash -e -l -c "pwd" )
-  - cmd: if [%TARGET%]==[mingw64] (
-      env &&
-      C:\msys64\usr\bin\bash -e -l -c "pwd" )
-
-  # =================================================================================
-  # Understand cygwin
-  # =================================================================================
-
-  - cmd: if [%TARGET%]==[cygwin] (
-      env &&
-      C:\cygwin\bin\bash -e -l -c "pwd" )
-  - cmd: if [%TARGET%]==[cygwin64] (
-      env &&
-      C:\cygwin64\bin\bash -e -l -c "pwd" )
+  - cmd: if NOT [%MYSHELL%]==[] (
+      echo %MYSHELL% &&
+      %MYSHELL% which cmake &&
+      %MYSHELL% cmake --help )
+      %MYSHELL% -e -l -c "pwd" )
 
 #  # From https://github.com/gabime/spdlog/blob/v1.x/appveyor.yml
 #  # See also https://www.appveyor.com/docs/windows-images-software/#mingw-msys-cygwin
