Try fixing complete failure to run cygwin and git commands: if NOT [%MYSHELL%]==[] ( echo %MYSHELL% && set PATH=%PATH:C:\Program Files\Git\usr\bin;=% && %MYSHELL% which cmake && %MYSHELL% cmake --help && %MYSHELL% -e -l -c "pwd" ) \Microsoft was unexpected at this time. Command exited with code 255

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -111,7 +111,7 @@ build_script:
 
   - cmd: if NOT [%MYSHELL%]==[] (
       echo %MYSHELL% &&
-      set PATH=%PATH:C:\Program Files\Git\usr\bin;=% &&
+      set PATH= &&
       %MYSHELL% which cmake &&
       %MYSHELL% cmake --help &&
       %MYSHELL% -e -l -c "pwd" )
